[gd_scene load_steps=6 format=2]

[ext_resource path="res://Graphics/tree_small.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Tree/SoulTree.gd" type="Script" id=2]
[ext_resource path="res://Graphics/tree_mature.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 34.5, 71 )

[sub_resource type="CircleShape2D" id=2]
radius = 108.296

[node name="SoulTree" type="Area2D"]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource( 2 )

[node name="SmallTree" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )
offset = Vector2( 0, -20 )

[node name="BigTree" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )
offset = Vector2( 0, -90 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.5, -55 )
shape = SubResource( 3 )

[node name="SaveMargin" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SaveMargin"]
shape = SubResource( 2 )

[node name="Timer" type="Node" parent="."]

[node name="Growing" type="Timer" parent="Timer"]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="on_dead" from="." to="." method="_on_SoulTree_on_dead"]
[connection signal="area_entered" from="SaveMargin" to="." method="_on_SaveMargin_area_entered"]
[connection signal="area_exited" from="SaveMargin" to="." method="_on_SaveMargin_area_exited"]
[connection signal="timeout" from="Timer/Growing" to="." method="_on_Growing_timeout"]
